# INFT2503

./: .gitignore  README.md
Oving1/: CMakeLists.txt  main  main.cpp
Oving10/game/: main.cpp
Oving2/: CMakeLists.txt  main.cpp  oppgave1.cpp  oppgave4.cpp  oppgave5.cpp  oppgave6.cpp
Oving3/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp  oppgave4.cpp
Oving3/Oppgave3/: Commodity.cpp  Commodity.h  oppgave3.cpp
Oving4/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp
Oving5/: CMakeLists.txt  main.cpp
Oving6/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp
Oving7/: CMakeLists.txt  Fraction.cpp  Fraction.h  oppgave1.cpp
Oving7/oppgave1/: Fraction.cpp  Fraction.h  oppgave1a.cpp  oppgave1b.cpp
Oving7/oppgave2/: Set.cpp  Set.h  oppgave2.cpp
Oving8/: CMakeLists.txt  oppgave1.cpp  oppgave2.cpp
Oving8/oppg2/: oppgave2.cpp
Oving9/: CMakeLists.txt  oppgave_a.cpp  oppgave_b.cpp  oppgave_c.cpp
