cmake_minimum_required(VERSION 3.21)
project(Oving7)

set(CMAKE_CXX_STANDARD 14)

add_executable(Oving7 oppgave1/oppgave1a.cpp oppgave1/Fraction.cpp oppgave1/Fraction.h)
add_executable(Oppgave1b oppgave1/oppgave1b.cpp oppgave1/Fraction.cpp oppgave1/Fraction.h oppgave2/oppgave2.cpp oppgave2/Set.cpp oppgave2/Set.h)
